# erp_system

./: .gitignore  dockerfile  package-lock.json  test.js
backend/: Cargo.toml  package-lock.json  package.json
backend/callbacks/: Cargo.toml
backend/callbacks/data/: script.js  script.py
backend/callbacks/src/: main.rs
backend/data/: RD-M001.json  approve_frontend.json  approve_test.json  initiate_test.json  processes.json  simple_branch_test.json
backend/migrations/: 20231022164306_initial_db_setup.sql  20231022175727_fix_users_table.sql  20231024191500_roles_in_new_users.sql  20231024213545_emails_in_new_users.sql  20231102204954_status_should_be_the_msg_not_bool.sql  20231109083330_separate_current_user_from_tickets.sql  20231110064419_user_active_tickets_tracks_status.sql  20231110065734_tickets_doesnt_track_current_step.sql  20231112105903_user_active_tickets_keeps_track_of_type_of_ticket.sql  20240211104818_notifications.sql  20240413101037_add_state_to_tickets.sql
backend/notifier/: Cargo.toml
backend/notifier/src/: main.rs
backend/server/: Cargo.toml
backend/server/data/: RD-M001.json  approve_frontend.json  approve_test.json  blocking_task_branch_test.json  blocking_task_test.json  callback_test.json  initiate_test.json  nonblocking_task_branch_test.json  nonblocking_task_test.json  notify_inside_update_internal.json  notify_test.json  simple_branch_test.json  webhook_approve_test.json  webhook_notify_test.json  webhook_test.json
backend/server/data/scripts/: script.py
backend/server/migrations/: 20231102202341_ticket_should_have_status.sql  20231110065115_user_active_tickets_tracks_node_number.sql  20231114174048_process_defs_tracks_process_desc.sql
backend/server/src/: callbacks.rs  db_types.rs  logger.rs  main.rs  notif_handler.rs  process.rs  roles.rs  ticket.rs  users.rs  utils.rs
backend/src/: db_types.rs  logger.rs  main.rs  process.rs  processes.d.ts  processes.ts  roles.rs  save_process.ts  server.ts  ticket.rs  types.d.ts  users.rs  utils.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/Components/: AddProcess.tsx  AddTicket.tsx  Footer.js  Footer.tsx  Sidebar.js  Sidebar.tsx  TopNavigation.js  TopNavigation.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AddProcess.tsx  AddTicket.tsx  GenerateTimetable.tsx  JobComponent.tsx  Selection.tsx  Sidebar.tsx  TopNavigation.tsx
frontend/src/components/DashBoard/: DashBoard.tsx  TicketSearch.tsx
frontend/src/components/DashBoard/Admin/: AddRole.tsx  AdminDashBoard.tsx  ApproveNewUsers.tsx
frontend/src/components/DashBoard/User/: UserDashBoard.tsx
frontend/src/pages/: _app.tsx  home.tsx  index.tsx  register.tsx  signin.tsx  signup.tsx
frontend/src/pages/api/: add_role.ts  approve_user.ts  check_user.ts  create_process.ts  create_ticket.ts  get_all_processes.ts  get_all_roles.ts  get_new_users.ts  get_process_data.ts  get_user_tickets.ts  is_admin.ts  register_new_user.ts  roles.ts  update_ticket.ts  uploadthing.ts
frontend/src/pages/api/new_user/: index.ts  (+2 more)
frontend/src/server/: uploadThing.ts
frontend/src/styles/: globals.css
frontend/src/utils/: uploadThing.ts
scripts/: create_test_db.ps1  run_tests.ps1
scripts/api_tests/: api_check.test.ts  package-lock.json  package.json  process_test.test.ts  users_test.test.ts  vite.config.js
(+6 files in other folders)
