[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = {version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
sqlx = {version = "0.7.2", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"]}
tokio = {version = "1.33.0", features = ["full"]}
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = {version = "1.4.1", features = ["serde", "v4"]}
