[workspace]
members = ["server", "notifier", "callbacks"]
resolver = "2"

[workspace.dependencies]
axum = {version = "0.6.20"}
chrono = {version = "0.4.31"}
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = "0.7.2"
tokio ="1.33.0"
tower-http = "0.4.4"
uuid = "1.4.1"
