[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
once_cell.workspace = true
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { workspace = true, features = ["full"] }
dotenv.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = {workspace = true, features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"]}
uuid = {workspace = true, features = ["serde", "v4"]}
