[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {workspace = true, features = ["macros"]}
chrono = {workspace = true, features = ["serde"]}
dotenv.workspace = true
once_cell.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
sqlx = {workspace = true, features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"]}
tokio = {workspace = true, features = ["full"]}
tower-http = {workspace = true, features = ["cors"] }
uuid = {workspace = true, features = ["serde", "v4"]}
walkdir = "2.4.0"
